# demestats

./: .gitignore  README.md  README.rst  pyproject.toml  readthedocs.yml
docs/: authors.md  authors.rst  ccr.md  conf.py  iicr.md  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  loading_data.md  model_constraints.md  momi3_tutorial.ipynb  momi3_tutorial.md  notation.md  notation.rst  pruning.md  random_projection.md  readme.md  requirements.txt  sfs_optimization.md  special_examples.md  tutorial.md  tutorial.rst
docs/ICR/: icr.md  icr_optimization.md  icr_tutorial.md  index.md
docs/api/: index.rst  loglik.rst  main.rst  optimization.rst
docs/momi3/: index.md  model_constraints.md  momi3_tutorial.md  random_projection.md  sfs_optimization.md  special_examples.md  tsfs.md
docs/tutorial_code/: examples.ipynb  momi3_tutorial.ipynb  random_projection.ipynb
fit/: fit.py  fit_seq.py  read_data.py
fit/tests/: iicr_cruve_debug.ipynb  iwm_two_pop.ipynb  likelihood_example.ipynb  plotting_likelihood.ipynb  test_fit.py  testing_iicr_5_pop.ipynb
notebooks/: migration_surface.ipynb
notebooks/fit/: ARG_likelihood_timing.ipynb  expo_growth_proj_error.ipynb  phlashlib_grad.ipynb  phlashlib_timing.ipynb  sfs_projection_bug.ipynb
src/demesinfer/: __init__.py  bounded_solver.py  coal_rate.py  constr.py  demesinfer.py  display.py  event_tree.py  events.py  linalg.py  loglik.py  lyapunov.py  path.py  pexp.py  rescale.py  traverse.py  util.py
src/demesinfer/ccr/: __init__.py  events.py  interp.py  lift.py  state.py
src/demesinfer/drivers/iicr/: __init__.py  events.py
src/demesinfer/fit/: ARG_likelihood_timing.ipynb  fit.py  fit_arg.py  fit_composite_arg_sfs.py  fit_composite_phlashlib_sfs.py  fit_composite_seq_sfs_iicr.py  fit_mrpast.py  fit_phlashlib.py  fit_sfs.py  fit_ts.py  mrpast_util.py  phlashlib_grad.ipynb  phlashlib_timing.ipynb  plotting_util.py  read_data.py  util.py
src/demesinfer/iicr/: __init__.py  bounded_solver.py  events.py  interp.py  lift.py  migration.py  migration_dn.py  state.py
src/demesinfer/iicr/dn/: events.py  interp.py  lift.py  state.py
src/demesinfer/iicr/nd/: events.py  interp.py  lift.py  state.py
src/demesinfer/loglik/: arg.py  sfs_loglik.py
src/demesinfer/numba/: lift_nd_mats.py
src/demesinfer/sfs/: __init__.py  migration.py
src/demesinfer/sfs/events/: __init__.py  admix.py  lift.py  lift.py.orig  migration.py  sample.py  split1.py  split2.py  state.py
src/demestats/: __init__.py  bounded_solver.py  constr.py  event_tree.py  events.py  jsfs.py  linalg.py  path.py  pexp.py  rescale.py  traverse.py  util.py
src/demestats/ccr/: __init__.py  curve.py  events.py  interp.py  lift.py  state.py
src/demestats/ccr/exact/: __init__.py  events.py  interp.py  lift.py  state.py
src/demestats/ccr/mf/: __init__.py  events.py  interp.py  lift.py  state.py
src/demestats/fit/: fit_composite_phlashlib_sfs.py  fit_icr.py  fit_phlashlib.py  fit_sfs.py  mrpast_util.py  plotting_util.py  read_data.py  util.py
src/demestats/icr/: __init__.py  events.py  interp.py  lift.py  state.py
src/demestats/icr/dn/: events.py  lift.py  state.py
src/demestats/icr/mf/: __init__.py  state.py
src/demestats/icr/nd/: events.py  interp.py  state.py
src/demestats/iicr/: __init__.py
src/demestats/iicr/dn/: __init__.py  events.py  interp.py  lift.py  state.py
src/demestats/iicr/mf/: __init__.py  events.py  interp.py  lift.py  state.py
src/demestats/iicr/nd/: events.py  interp.py  lift.py  state.py
src/demestats/loglik/: arg.py  icr_loglik.py  sfs_loglik.py
src/demestats/numba/: lift_nd_mats.py
src/demestats/sfs/: __init__.py  migration.py  momints.py
src/demestats/sfs/events/: __init__.py  admix.py  lift.py  migration.py  sample.py  split1.py  split2.py  state.py
src/demestats/tsfs/: __init__.py
tests/: conftest.py  demos.py  test_bugs.py  test_ccr.py  test_constr.py  test_event_tree.py  test_icr.py  test_iicr.py  test_linalg.py  test_loglik.py  test_pexp.py  test_sfs.py  test_tsfs.py
tests/assets/: bug1.pkl  bug2.pkl
