[project]
name = "demesinfer"
version = "0.1.0"
description = "Inference for demes-formatted demographic models"
readme = "README.rst"
authors = [
    { name = "Jonathan Terhorst", email = "terhorst@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "demes>=0.2.3",
    "diffrax",
    "equinox>=0.11.0,<0.13",
    "gmpy2>=2.2.1",
    "interpax",
    "jax>=0.6.2",
    "jaxtyping>=0.3.2",
    "lineax>=0.0.8",
    "loguru>=0.7.3",
    "networkx>=3.5",
    "numpy>=2.2.0",
    "penzai>=0.2.5",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.8.0",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "moments-popgen>=1.4.4",
    "momi>=2",
    "notebook>=7.4.4",
    "pydot>=4.0.1",
    "pygraphviz>=1.14",
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
    "rope>=1.14.0",
    "stdpopsim>=0.3.0",
]

[tool.uv.sources]
interpax = { git = "https://github.com/f0uriest/interpax", rev = "dependabot/pip/equinox-gte-0.11.0-and-lt-0.14" }
diffrax = { git = "https://github.com/patrick-kidger/diffrax" }
equinox = { git = "https://github.com/patrick-kidger/equinox.git", rev = "vmap-breakpoint-error" }

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
ignore = ["F722", "F821"]
