[project]
name = "demestats"
version = "0.1.0"
description = "Inference for demes-formatted demographic models"
readme = "README.md"
authors = [
    { name = "Kevin Liang", email = "jkliang@umich.edu" },
    { name = "Jonathan Terhorst", email = "jonth@umich.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "demes>=0.2.3",
    "diffrax>=0.7.0",
    "equinox>=0.13.1",
    "expm-unif",
    "gmpy2>=2.2.1",
    "interpax>=0.3.10",
    "jax>=0.7.2",
    "jaxtyping>=0.3.2",
    "lineax>=0.0.8",
    "loguru>=0.7.3",
    "networkx>=3.5",
    "numba>=0.62.1",
    "numpy<2.2",
    "optimistix>=0.0.10",
    "penzai>=0.2.5",
    "phlashlib>=0.1.1",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.8.0",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.7.2",
    "phlashlib[gpu]>=0.1.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "demesdraw>=0.4.0",
    "jaxopt>=0.8.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "jupytext[gpu]>=1.18.1",
    "matplotlib>=3.10.3",
    "momi>=2.1.21",
    "nbclassic>=1.3.3",
    "notebook>=7",
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
    "rope>=1.14.0",
    "stdpopsim>=0.3.0",
]
test = [
    "moments-popgen>=1.4.5",
    "momi>=2.1.21",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
ignore = ["F722", "F821"]

[tool.uv.sources]
expm-unif = { git = "ssh://git@github.com/jthlab/expm_unif" }
